2010-06-22  Keith Packard <keithp@keithp.com> (tiny change)

	* font.c (font_parse_fcname): Allow . for sizes like 7.5 (bug#6437).

2010-06-20  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (try_scrolling): When scroll-conservatively is set to
	most-positive-fixnum, be extra accurate when scrolling window
	start, to avoid missing the cursor line.

2010-06-19  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (try_scrolling): Compute the limit for searching point
	in forward scroll from scroll_max, instead of an arbitrary limit
	of 10 screen lines.  See
	http://lists.gnu.org/archive/html/emacs-devel/2010-06/msg00766.html
	and
	http://lists.gnu.org/archive/html/emacs-devel/2010-06/msg00773.html
	for details.

2010-06-16  Glenn Morris  <rgm@gnu.org>

	* editfns.c (Fbyte_to_string): Pacify compiler.

2010-06-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lread.c (read1): Phase out old-style backquotes a bit more.

2010-06-12  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in ($(BLD)/bidi.$(O)): Depend on biditype.h and
	bidimirror.h.

	* deps.mk (bidi.o): Depend on biditype.h and bidimirror.h.

	* bidi.c (bidi_initialize): Remove explicit initialization of
	bidi_type_table; include biditype.h instead.  Don't support
	entries whose second codepoint is zero.  Initialize bidi_mirror_table.
	(bidi_mirror_char): Use bidi_mirror_table.

	* biditype.h: New file.

	* bidimirror.h: New file.

	* window.c (syms_of_window): Doc fix (bug#6409).

2010-06-12  Romain Francoise  <romain@orebokech.com>

	* Makefile.in (lisp, shortlisp): Use new location of vc-hooks and
	ediff-hook.

2010-06-10  Glenn Morris  <rgm@gnu.org>

	* editfns.c (Fbyte_to_string): Pacify compiler.

	* m/ibms390x.h: Rather than duplicating ibms390.h, just include it.

2010-06-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* dbusbind.c (xd_append_arg): Don't "make-unibyte" the string.
	Check `object's type before accessing its guts.

2010-06-09  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/usg5-4.h: Fix previous change.